# StockQuantAssisant

./: .gitignore  Cargo.toml  README.md  config.toml.example  get_a_stock_price.py  get_stock_price.py  stock_analyzer.py
app/models/: database.py
src/: binance.rs  config.rs  data_collector.rs  db.rs  llm.rs  main.rs  web.rs
static/: index.html
